--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body > 
      <div id="side-menu" class="move-me" >
         <hr class="hr-set" />
-        <span class="logo-text" >网络152</span>  <i  class="menu-close-icon fa fa-angle-double-left fa-2x"></i> 
+        <span class="logo-text" >网络152<?php $openid?></span>  <i  class="menu-close-icon fa fa-angle-double-left fa-2x"></i> 
         <hr class="hr-set-two" />
 
         <ul  >
